# apps/api/src/connections/connections.module.ts
@@ -1,0 +1,19 @@
+import { Module } from '@nestjs/common';
+import { AirportsModule } from '../airports/airports.module';
+import { FlightsModule } from '../flights/flights.module';
+import { InterlineAgreementsModule } from '../interline-agreements/interline-agreements.module';
+import { MctRulesModule } from '../mct-rules/mct-rules.module';
+import { ConnectionsController } from './connections.controller';
+import { ConnectionsService } from './connections.service';
+
+@Module({
+  imports: [
+    FlightsModule,
+    AirportsModule,
+    MctRulesModule,
+    InterlineAgreementsModule,
+  ],
+  controllers: [ConnectionsController],
+  providers: [ConnectionsService],
+})
+export class ConnectionsModule {}
